2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>

	* drive-button.c: (gvm_run_command):
	
	Added missing #include.
	Commented dead code.
	Fixed possible leak in gvm_run_command.
	
2005-07-13  Davyd Madeley  <davyd@madeley.id.au>

	* drive-button.c: More extended media handling from Emmanuel Touzery.

2005-07-01  Davyd Madeley  <davyd@madeley.id.au>

	* drive-button.c: Intelligent options for media, taken from GVM.
	  Patch by Emmanuel Touzery <emmanuel.touzery@wanadoo.fr>. Closes
	  #308388.

2005-06-12  Davyd Madeley  <davyd@madeley.id.au>

	* drive-button.c: Avoid markup in gnome-applets message. Closes
	  #167170.

2005-03-07  Shaun McCance  <shaunm@gnome.org>

	* drivemount/help/C/drivemount.xml:
	- Trent	Lloyd ∉ Sun Microsystems

2005-03-07  Davyd Madeley  <davyd@madeley.id.au>

	* help/C/drivemount.xml: New documentation from Trent Lloyd.
	
	* help/C/figures/*: Replace old figures with new figures.

2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* drivemount.c: Don't leak style while handling the change_background
	signal.  Fix adapted from Vincent Untz's fixes to various panel
	applets.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* drivemount.c: Add missing header.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* drivemount.c: Make about box centred.

2004-11-29  James Henstridge  <james@jamesh.id.au>

	* drive-button.c (drive_button_class_init): add a special RC style
	for DriveButtons to reduce the padding, similar to what the window
	list does.  This gives larger icons.
	(drive_button_ensure_popup): handle a NULL display name.

2004-11-05  James Henstridge  <james@jamesh.id.au>

	* drivemount.c (change_background): add a change_background
	handler.  This doesn't affect the buttons currently, but is
	noticable in themes with non-square buttons.

2004-10-26  James Henstridge  <james@jamesh.id.au>

	* GNOME_DriveMountApplet.xml: remove commented out items from
	file.

	* drive-button.c: rather than just unmounting the drive on left