@@ -1,8 +1,0 @@
-figdir = figures
-
-docname = drivemount
-lang = C
-omffile = drivemount-C.omf
-entities = legal.xml
-include $(top_srcdir)/xmldocs.make
-dist-hook: app-dist-hook
