@@ -1,30 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>
-      docs@gnome.org (GDP)
-    </creator>
-    <maintainer>
-      docs@gnome.org (GDP)
-    </maintainer>
-    <title>
-      Disk Mounter Applet
-    </title>    
-    <date>
-      2004-02-09
-    </date>
-    <version identifier="2.1" date="2004-02-09" description="Updated for GNOME 2.6, program version 2.5.4"/>
-    <subject category="GNOME|Applets|Utility"/>
-    <description>
-      User manual for the Disk Mounter applet. 
-    </description>
-    <type>
-      user's guide
-    </type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="drivemount.xml"/>
-    <language code="C"/>
-    <relation seriesid="e9162e90-01bc-11d7-9b3b-c253a7006472"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
