@@ -21,6 +21,7 @@
 <!-- appropriate code -->
   <articleinfo> 
     <title>&appname; Manual</title>
+    <abstract role="description">User manual for the Disk Mounter applet.</abstract>
     <copyright>
       <year>2005</year>
       <holder>Trent Lloyd</holder>
