@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<omf>
+  <resource>
+    <subject category="GNOME|Applets|Utility"/>
+    <type>user's guide</type>
+    <relation seriesid="e9162e90-01bc-11d7-9b3b-c253a7006472"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
+  </resource>        
+</omf>
