@@ -1,3 +1,10 @@
+2005-07-20  Danilo Šegan  <danilo@gnome.org>
+
+	* help/Makefile.am: Added.
+	* help/drivemount.omf.in: Added.
+	* help/C/Makefile.am: Removed.
+	* help/C/drivemount.xml: Add <abstact role="description">.
+
 2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* drive-button.c: (gvm_run_command):
